Adding litellm completions

--- a/custom.scss
+++ b/custom.scss
@@ -26,3 +26,11 @@
 .reveal .slide figure svg {
   width: 100%;
 }
+
+.small_text .column p {
+  font-size: 30px;
+}
+
+.test {
+  font-size: 1em;
+}
