--- a/custom.scss
+++ b/custom.scss
@@ -31,6 +31,15 @@
   font-size: 30px;
 }
 
+.column .small_text {
+  font-size: 30px;
+}
+
 .test {
   font-size: 1em;
+}
+
+.dataframe {
+
+  font-size: 20px
 }
